--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -17,7 +17,7 @@
 }
 
 .header {
-  // position: fixed;
+  position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
