--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 #components-form-demo-normal-login .login-form {
   max-width: 300px;
 }
@@ -12,4 +13,69 @@
 
 #components-form-demo-normal-login .login-form-button {
   width: 100%;
+}
+
+:root {
+  --PrimaryColor: hsl(199, 100%, 33%);
+  --SecondaryColor: hsl(187, 85%, 43%);
+  --gradientColor: linear-gradient(
+    to right,
+    hsl(187, 85%, 43%),
+    hsl(199, 100%, 33%)
+  );
+  --whiteColor: hsl(0, 0%, 100%);
+  --blackColor: hsl(201, 33%, 16%);
+  --textColor: hsl(240, 4%, 36%);
+  --whiteColorDeam: hsl(0, 0%, 93%);
+  --greyText: rgb(190, 190, 190);
+  --inputColor: rgb(239, 239, 239);
+  --bodyColor: rgb(240, 240, 246);
+  --cardBG: rgb(225, 225, 235);
+}
+
+body,
+html {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif; /* 可选：设置默认字体 */
+}
+
+#root .login {
+  background-image: url("../../assets/img(3).jpg");
+  background-size: cover;
+  height: 100vh;
+}
+#root .loginForm {
+  position: absolute;
+  top: 10rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 400px;
+}
+#root .loginForm .loginTitle {
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+  color: var(--whiteColor);
+  font-weight: 600;
+  padding-bottom: 1rem;
+}
+#root .loginForm .formItems {
+  padding: 1rem;
+  border: 3px solid var(--whiteColor);
+  border-radius: 20px;
+}
+#root .loginForm .formItems label {
+  color: var(--whiteColor);
+}
+#root .loginForm .formItems .ant-input-affix-wrapper {
+  background-color: var(--SecondaryColor);
+}
+#root .loginForm .formItems .ant-input-affix-wrapper input {
+  padding: 5px 10px;
+  background-color: var(--whiteColor);
+  border-radius: 20px;
+}
+#root .loginForm .formItems .ant-btn {
+  background-color: var(--SecondaryColor);
 }/*# sourceMappingURL=Login.css.map */
