--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -17,7 +17,7 @@
 }
 
 .header {
-  position: fixed;
+  // position: fixed;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -52,6 +52,18 @@
       &:focus {
         color: var(--PrimaryColor);
       }
+    }
+  }
+  .nickname {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    line-height: 14px;
+
+    .usrIcon {
+      font-size: 13px;
+      padding-right: 10px;
     }
   }
 
