--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -48,15 +48,25 @@
 .header .navItem .navLink:focus {
   color: var(--PrimaryColor);
 }
-.header .nickname {
+.header .usrCenter {
+  position: relative;
+}
+.header .usrCenter .btn {
+  width: 150px;
+}
+.header .usrCenter .nickname {
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 14px;
   line-height: 14px;
 }
-.header .nickname .usrIcon {
+.header .usrCenter .nickname .usrIcon {
   font-size: 13px;
+  padding-right: 10px;
+}
+.header .usrCenter .logoutBtn .logoutIcon {
+  font-size: 16px;
   padding-right: 10px;
 }
 @media screen and (max-width: 768px) {
