--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -54,16 +54,30 @@
       }
     }
   }
-  .nickname {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    line-height: 14px;
+  .usrCenter {
+    position: relative;
 
-    .usrIcon {
-      font-size: 13px;
-      padding-right: 10px;
+    .btn {
+      width: 150px;
+    }
+    .nickname {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 14px;
+      line-height: 14px;
+
+      .usrIcon {
+        font-size: 13px;
+        padding-right: 10px;
+      }
+    }
+
+    .logoutBtn {
+      .logoutIcon {
+        font-size: 16px;
+        padding-right: 10px;
+      }
     }
   }
 
