--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -164,6 +164,7 @@
   font-size: 15px;
   color: var(--textColor);
   transition: 0.3s ease-in-out;
+  cursor: pointer;
 }
 .footer .secContent .footerCard .footerLinks .linkGroup .footerList .icon {
   font-size: 15px;
