--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -182,6 +182,7 @@
             font-size: 15px;
             color: var(--textColor);
             transition: 0.3s ease-in-out;
+            cursor: pointer;
 
             .icon {
               font-size: 15px;
